# fast-api-template

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  database.py  main.py
app/api/: __init__.py  router.py
app/api/endpoints/: auth.py  users.py
app/models/: __init__.py  token.py  user.py
app/repositories/: user_repository.py
app/security/: __init__.py  jwt.py  password.py
