[project]
name = "fast-api-template"
version = "0.1.0"
description = "FastAPI template with MongoDB and JWT authentication"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "pydantic==2.12.4",
    "motor==3.7.1",
    "pymongo==4.15.3",
    "python-jose==3.5.0",
    "bcrypt==5.0.0",
    "python-multipart==0.0.20",
    "email-validator==2.3.0",
    "python-dotenv==1.2.1",
]

[tool.poe.tasks]
dev = "uvicorn app.main:app --host 127.0.0.1 --port 8000 --reload"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 4"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
]